# paseto-openid-server

./: .env.example  .gitignore  Cargo.toml  LICENSE.md  README.md  keygen.sh
.github/workflows/: linter.yml  tests.yml
src/: error.rs  logger.rs  mail.rs  main.rs  paseto.rs  responder.rs  tests.rs
src/database/: client.rs  drop.sql  mod.rs  up.sql
src/locator/: auth.rs  mod.rs  paseto.rs
src/middleware/: mod.rs
src/openid/: authorization.rs  mod.rs  verification.rs
src/routes/: authentication.rs  authorize.rs  client.rs  mod.rs
src/routes/openid/: authorize.rs  mod.rs  token.rs  userinfo.rs
