[package]
name = "paseto-openid-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rbatis = { version = "3.1.5", default-features = false, features = ["postgres", "runtime-tokio-rustls"] }

rbson = "2.0"
getset = "0.1.2"
typed-builder = "0.10.0"
argon2 = "0.4.0"
chrono = "0.4.19"
log = "0.4.16"
dotenv = "0.15.0"
rocket_cors = "0.6.0-alpha1"
