[package]
name = "paseto-openid-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
rbatis = { version = "3.1.5", default-features = false, features = ["postgres", "runtime-tokio-rustls"] }
google-authenticator = { version = "0.3.0", features = ["with-qrcode"] }
lettre = { version = "0.10.0-rc.4", features = ["tokio1", "builder", "tokio1-native-tls"] }
tower-http = { version = "0.2.5", features = ["cors", "trace"] }

axum = "0.5.3"
lettre_email = "0.9"
regex = "1.5.5"
openssl = "0.10.38"
rusty_paseto = "0.4.0"
serde_json = "1.0.79"
rbson = "2.0"
getset = "0.1.2"
typed-builder = "0.10.0"
rust-argon2 = "1.0.0"
chrono = "0.4.19"
log = "0.4.16"
dotenv = "0.15.0"
lazy_static = "1.4.0"
zxcvbn = "2.2.1"
base32 = "0.4.0"
thiserror = "1.0.30"
async-trait = "0.1.53"
cfg-if = "1.0.0"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
axum-test-helper = { git = "https://github.com/Randoooom/axum-test-helper.git" }
